--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,7 @@
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 <link rel="stylesheet" href="{{ site.url }}/assets/css/jquery.mmenu.all.css">
 <link rel="stylesheet" href="{{ site.url }}/assets/css/jquery.floating-social-share.min.css">
+
 <!-- Webfonts -->
 <link href="//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
 
@@ -42,7 +43,7 @@
 
 <!-- Load Modernizr -->
 <script type="text/javascript" src="{{ site.url }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
-
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gifffer/1.5.0/gifffer.js"></script>
 {% include icons.html %}
 
 {% if page.image.background or site.background %}
